Fix minor lint4j warnings.
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@1851 ef53c05b-3124-4d59-ae7d-fe3273f42be7